--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: ^3.1.3
 
 dependencies:
-  synchronized: ^3.1.0
-  meta: "<=1.10.0 >=1.9.0"
   logging: ^1.2.0
+  meta: ^1.12.0
+  synchronized: ^3.1.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^3.0.0
   test: ^1.21.0
